--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-auth": "^4.24.11",
     "next-themes": "latest",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.6.2",
     "react": "^19",
     "react-day-picker": "9.8.0",
