--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@sveltejs/kit": "latest",
     "@tanstack/react-table": "^8.21.3",
     "@types/js-cookie": "^3.0.6",
+    "@types/react-transition-group": "^4.4.12",
     "@vercel/analytics": "latest",
     "antd": "^5.27.2",
     "autoprefixer": "^10.4.20",
@@ -48,6 +49,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cookies-next": "^6.1.0",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "latest",
@@ -65,6 +67,7 @@
     "react-hook-form": "^7.62.0",
     "react-query": "^3.39.3",
     "react-resizable-panels": "^2.1.7",
+    "react-transition-group": "^4.4.5",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "svelte": "latest",
