--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "generate": "plop",
     "lint": "next lint",
     "start": "next start"
   },
