--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@pspdfkit/document-authoring": "^1.2.3",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -41,8 +42,12 @@
     "@remix-run/react": "latest",
     "@sveltejs/kit": "latest",
     "@tanstack/react-table": "^8.21.3",
+    "@types/file-saver": "^2.0.7",
+    "@types/html-to-docx": "^1.8.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/qrcode": "^1.5.5",
     "@types/react-transition-group": "^4.4.12",
+    "@types/xml2js": "^0.4.14",
     "@vercel/analytics": "latest",
     "antd": "^5.27.2",
     "autoprefixer": "^10.4.20",
@@ -52,16 +57,32 @@
     "cmdk": "1.0.4",
     "cookies-next": "^6.1.0",
     "date-fns": "4.1.0",
+    "docx": "^9.5.1",
+    "docx-preview": "^0.3.7",
+    "docxtemplater": "^3.66.7",
+    "docxtemplater-image-module": "^3.1.0",
     "embla-carousel-react": "8.5.1",
+    "file-saver": "^2.0.5",
     "geist": "latest",
+    "html-to-docx": "^1.8.0",
+    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.12",
+    "htmlparser2": "^10.0.0",
     "input-otp": "1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.3",
+    "konva": "^10.0.2",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.11.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "latest",
     "node-fetch": "^3.3.2",
+    "pdf-lib": "^1.17.1",
+    "pizzip": "^3.2.0",
     "prettier": "^3.6.2",
+    "puppeteer": "^24.25.0",
+    "qrcode": "^1.5.4",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -72,12 +93,15 @@
     "react-transition-group": "^4.4.5",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
+    "superdoc": "^0.24.0",
     "svelte": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^0.9.9",
     "vue": "latest",
     "vue-router": "latest",
+    "xml2js": "^0.6.2",
     "zod": "3.25.67"
   },
   "devDependencies": {
