--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "sonner": "^1.7.4",
     "superdoc": "^0.24.0",
     "svelte": "latest",
+    "swr": "^2.3.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
